2021-09-30  Björn Esser  <besser82 at fedoraproject.org>

	pam_tcb: Fix "-Wpedantic".
	* pam_tcb/pam_unix_auth.c (pam_sm_authenticate): ISO C forbids
	omitting the middle term of a '?:' expression.
	* pam_tcb/pam_unix_sess.c (pam_sm_open_session): Likewise.
	* pam_tcb/pam_unix_passwd.c (pam_sm_chauthtok): Likewise.
	* pam_tcb/pam_unix_passwd.c (unix_prelim): Likewise.
	* pam_tcb/support.c (_set_ctrl): Likewise.
	* pam_tcb/support.h (pam_tcb_getlogin): New function.
	Small static inline wrapper around getlogin(3).

	* Make.defs: Add "-Wextra" to default CFLAGS.  Add an option to
	enable "-Werror" also.

	* ci/run-build-and-tests.sh: Build with "-Werror" enabled on CI.

	misc: Add preset file for systemd-sysusers.
	Such preset files are used with distributions that rely
	on systemd-sysusers to ensure all required system users
	and system groups are present on system boot.
	* Make.defs: Add preset for SYSUSERSDIR.
	* Makefile: Add (optional) top-level "install-sysusers" and
	"install-sysusers-auth" targets.
	* misc/Makefile: Likewise, with also adding build and clean
	targets.
	"install-sysusers-auth" targets.
	* misc/tcb.sysusers.in: New file.
	* misc/tcb-auth.sysusers: New file.
	* .gitignore: Add build output from "misc" directory.

	misc: Add pkgconfig file.
	pkgconfig files provide a useful mechanism for storing various
	information about libraries and packages on a given system.
	Information stored by .pc files include compiler and linker flags
	necessary to use a given library, as well as any other relevant
	metadata.
	* Make.defs: Add new presets for PREFIX, INCLUDEDIR, and
	PKGCONFIGDIR.  Also adapt the existing presets slightly.
	* misc/Makefile: Build and install the pkgconfig file.
	Also use INCLUDEDIR instead of hardcoding its path, and
	adapt the clean target.
	* misc/tcb.pc.in: New file.
	* tcb.spec: Add pkgconfig file.
	* .gitignore: Add ignore rule for tcb.pc.

	* Make.defs: Change MANDIR to "/usr/share/man".
