@@ -29,7 +29,7 @@ echo 'END OF BUILD ENVIRONMENT INFORMATION'
 nproc="$(nproc)" || nproc=1
 j="-j$nproc"
 
-CFLAGS='-O2 -Wall -W -DENABLE_SETFSUGID -DENABLE_NLS -DNLS_PACKAGE=\"Linux-PAM\"' \
+CFLAGS='-O2 -Wall -W -DENABLE_NLS -DNLS_PACKAGE=\"Linux-PAM\"' \
 	make -k $j CC="$CC" WERROR=1
 
 if git status --porcelain |grep ^.; then
